Add trips made, changes and validation in search trips

--- a/public/index.html
+++ b/public/index.html
@@ -17,4 +17,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+ <!--  <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAabs4yngMY9rie1CxefATnPzm3BpQ8SdE&libraries=places,geometry"
+      defer
+    ></script> -->
 </html>
